assets/mex-err
Traceback (most recent call last):
  File "/home/dincio/.cache/pypoetry/virtualenvs/mex-2iVoyaVn-py3.9/bin/mex", line 33, in <module>
    sys.exit(load_entry_point('mex', 'console_scripts', 'mex')())
  File "/home/dincio/.cache/pypoetry/virtualenvs/mex-2iVoyaVn-py3.9/bin/mex", line 25, in importlib_load_entry_point
    return next(matches).load()
  File "/usr/lib/python3.9/importlib/metadata.py", line 77, in load
    module = import_module(match.group('module'))
  File "/usr/lib/python3.9/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 790, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/dincio/code/mex/mex/main.py", line 9, in <module>
    from mex.context import Context, add_scope
  File "/home/dincio/code/mex/mex/context.py", line 100
    root.items()
    ^
SyntaxError: invalid syntax
